fixed arrow not showing up daterangepicker, and changed paramter to calendarFocused

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,7 @@ body {
 .is-active {
   font-weight: bold;
 }
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
